src/Skia/Bindings/Sk_canvas.hs

{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE DeriveFoldable #-}
{-# LANGUAGE DeriveFunctor #-}
{-# LANGUAGE DeriveGeneric #-}
{-# LANGUAGE DeriveTraversable #-}
{-# LANGUAGE DerivingStrategies #-}
{-# LANGUAGE DerivingVia #-}
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE EmptyCase #-}
{-# LANGUAGE ExplicitForAll #-}
{-# LANGUAGE GeneralizedNewtypeDeriving #-}
{-# LANGUAGE NamedFieldPuns #-}
{-# LANGUAGE OverloadedLabels #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE OverloadedStrings #-}
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ScopedTypeVariables #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- | This is an auto-generated FFI binding module.
module Skia.Bindings.Sk_canvas where

import Foreign
import Foreign.C
import Foreign.Storable
import Foreign.Storable.Offset

import Skia.Bindings.Types


{- | C function signature:

@
void sk_canvas_destroy(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_destroy" sk_canvas_destroy ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_destroy'
foreign import ccall "&sk_canvas_destroy" p'sk_canvas_destroy ::
  FunPtr (Ptr (Sk_canvas) -> IO (()))

{- | C function signature:

@
void sk_canvas_clear(sk_canvas_t *ccanvas, sk_color_t color)
@
-}
foreign import ccall "sk_canvas_clear" sk_canvas_clear ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Sk_color -- ^ C argument @"sk_color_t color"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_clear'
foreign import ccall "&sk_canvas_clear" p'sk_canvas_clear ::
  FunPtr (Ptr (Sk_canvas) -> Sk_color -> IO (()))

{- | C function signature:

@
void sk_canvas_clear_color4f(sk_canvas_t *ccanvas, sk_color4f_t *color)
@
-}
foreign import ccall "sk_canvas_clear_color4f" sk_canvas_clear_color4f ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_color4f) -- ^ C argument @"sk_color4f_t * color"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_clear_color4f'
foreign import ccall "&sk_canvas_clear_color4f" p'sk_canvas_clear_color4f ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_color4f) -> IO (()))

{- | C function signature:

@
void sk_canvas_discard(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_discard" sk_canvas_discard ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_discard'
foreign import ccall "&sk_canvas_discard" p'sk_canvas_discard ::
  FunPtr (Ptr (Sk_canvas) -> IO (()))

{- | C function signature:

@
int sk_canvas_get_save_count(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_get_save_count" sk_canvas_get_save_count ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (CInt) -- ^ C return type: @"int"@

-- | Function pointer to 'sk_canvas_get_save_count'
foreign import ccall "&sk_canvas_get_save_count" p'sk_canvas_get_save_count ::
  FunPtr (Ptr (Sk_canvas) -> IO (CInt))

{- | C function signature:

@
void sk_canvas_restore_to_count(sk_canvas_t *ccanvas, int saveCount)
@
-}
foreign import ccall "sk_canvas_restore_to_count" sk_canvas_restore_to_count ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CInt -- ^ C argument @"int saveCount"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_restore_to_count'
foreign import ccall "&sk_canvas_restore_to_count" p'sk_canvas_restore_to_count ::
  FunPtr (Ptr (Sk_canvas) -> CInt -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_color(sk_canvas_t *ccanvas, sk_color_t color, sk_blendmode_t cmode)
@
-}
foreign import ccall "sk_canvas_draw_color" sk_canvas_draw_color ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Sk_color -- ^ C argument @"sk_color_t color"@
  -> Sk_blendmode -- ^ C argument @"sk_blendmode_t cmode"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_color'
foreign import ccall "&sk_canvas_draw_color" p'sk_canvas_draw_color ::
  FunPtr (Ptr (Sk_canvas) -> Sk_color -> Sk_blendmode -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_color4f(sk_canvas_t *ccanvas, sk_color4f_t *color, sk_blendmode_t cmode)
@
-}
foreign import ccall "sk_canvas_draw_color4f" sk_canvas_draw_color4f ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_color4f) -- ^ C argument @"sk_color4f_t * color"@
  -> Sk_blendmode -- ^ C argument @"sk_blendmode_t cmode"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_color4f'
foreign import ccall "&sk_canvas_draw_color4f" p'sk_canvas_draw_color4f ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_color4f) -> Sk_blendmode -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_points(sk_canvas_t *ccanvas, sk_point_mode_t pointMode, size_t count, const sk_point_t points[], const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_points" sk_canvas_draw_points ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Sk_point_mode -- ^ C argument @"sk_point_mode_t pointMode"@
  -> CSize -- ^ C argument @"size_t count"@
  -> Ptr (Sk_point) -- ^ C argument @"const sk_point_t [] points"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_points'
foreign import ccall "&sk_canvas_draw_points" p'sk_canvas_draw_points ::
  FunPtr (Ptr (Sk_canvas) -> Sk_point_mode -> CSize -> Ptr (Sk_point) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_point(sk_canvas_t *ccanvas, float x, float y, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_point" sk_canvas_draw_point ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float x"@
  -> CFloat -- ^ C argument @"float y"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_point'
foreign import ccall "&sk_canvas_draw_point" p'sk_canvas_draw_point ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> CFloat -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_line(sk_canvas_t *ccanvas, float x0, float y0, float x1, float y1, sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_line" sk_canvas_draw_line ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> CFloat -- ^ C argument @"float x0"@
  -> CFloat -- ^ C argument @"float y0"@
  -> CFloat -- ^ C argument @"float x1"@
  -> CFloat -- ^ C argument @"float y1"@
  -> Ptr (Sk_paint) -- ^ C argument @"sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_line'
foreign import ccall "&sk_canvas_draw_line" p'sk_canvas_draw_line ::
  FunPtr (Ptr (Sk_canvas) -> CFloat -> CFloat -> CFloat -> CFloat -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_simple_text(sk_canvas_t *ccanvas, const void *text, size_t byte_length, sk_text_encoding_t encoding, float x, float y, const sk_font_t *cfont, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_simple_text" sk_canvas_draw_simple_text ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (()) -- ^ C argument @"const void * text"@
  -> CSize -- ^ C argument @"size_t byte_length"@
  -> Sk_text_encoding -- ^ C argument @"sk_text_encoding_t encoding"@
  -> CFloat -- ^ C argument @"float x"@
  -> CFloat -- ^ C argument @"float y"@
  -> Ptr (Sk_font) -- ^ C argument @"const sk_font_t * cfont"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_simple_text'
foreign import ccall "&sk_canvas_draw_simple_text" p'sk_canvas_draw_simple_text ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (()) -> CSize -> Sk_text_encoding -> CFloat -> CFloat -> Ptr (Sk_font) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_text_blob(sk_canvas_t *ccanvas, sk_textblob_t *text, float x, float y, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_text_blob" sk_canvas_draw_text_blob ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_textblob) -- ^ C argument @"sk_textblob_t * text"@
  -> CFloat -- ^ C argument @"float x"@
  -> CFloat -- ^ C argument @"float y"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_text_blob'
foreign import ccall "&sk_canvas_draw_text_blob" p'sk_canvas_draw_text_blob ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_textblob) -> CFloat -> CFloat -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_reset_matrix(sk_canvas_t *ccanvas)
@
-}
foreign import ccall "sk_canvas_reset_matrix" sk_canvas_reset_matrix ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_reset_matrix'
foreign import ccall "&sk_canvas_reset_matrix" p'sk_canvas_reset_matrix ::
  FunPtr (Ptr (Sk_canvas) -> IO (()))

{- | C function signature:

@
void sk_canvas_set_matrix(sk_canvas_t *ccanvas, const sk_matrix44_t *cmatrix)
@
-}
foreign import ccall "sk_canvas_set_matrix" sk_canvas_set_matrix ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_matrix44) -- ^ C argument @"const sk_matrix44_t * cmatrix"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_set_matrix'
foreign import ccall "&sk_canvas_set_matrix" p'sk_canvas_set_matrix ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_matrix44) -> IO (()))

{- | C function signature:

@
void sk_canvas_get_matrix(sk_canvas_t *ccanvas, sk_matrix44_t *cmatrix)
@
-}
foreign import ccall "sk_canvas_get_matrix" sk_canvas_get_matrix ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_matrix44) -- ^ C argument @"sk_matrix44_t * cmatrix"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_get_matrix'
foreign import ccall "&sk_canvas_get_matrix" p'sk_canvas_get_matrix ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_matrix44) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_round_rect(sk_canvas_t *ccanvas, const sk_rect_t *crect, float rx, float ry, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_round_rect" sk_canvas_draw_round_rect ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * crect"@
  -> CFloat -- ^ C argument @"float rx"@
  -> CFloat -- ^ C argument @"float ry"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_round_rect'
foreign import ccall "&sk_canvas_draw_round_rect" p'sk_canvas_draw_round_rect ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> CFloat -> CFloat -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_clip_rect_with_operation(sk_canvas_t *ccanvas, const sk_rect_t *crect, sk_clipop_t op, _Bool doAA)
@
-}
foreign import ccall "sk_canvas_clip_rect_with_operation" sk_canvas_clip_rect_with_operation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * crect"@
  -> Sk_clipop -- ^ C argument @"sk_clipop_t op"@
  -> CBool -- ^ C argument @"_Bool doAA"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_clip_rect_with_operation'
foreign import ccall "&sk_canvas_clip_rect_with_operation" p'sk_canvas_clip_rect_with_operation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Sk_clipop -> CBool -> IO (()))

{- | C function signature:
